--- a/NeuProject3/src/main/resources/application.properties
+++ b/NeuProject3/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 # -----------------------
 # Database
 # -----------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/quametmoi?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://54.179.55.245/project_sample?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+spring.datasource.username=cv
+spring.datasource.password=twd2022
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # -----------------------
 # Naming entity mapping table in SQL
@@ -23,7 +24,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # -----------------------
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=project.testingsystem@gmail.com
-spring.mail.password=testingsystem
+spring.mail.username=ngotrungnhat81@gmail.com   
+spring.mail.password=ng0trungnhat@
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
